--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,7 +8,7 @@
 
     &_container {
         width: 90%;
-        max-width: 500px;
+        max-width: 400px;
         min-height: 200px;
         background-color: $modalcontenedor;
         position: relative;
@@ -25,7 +25,7 @@
         h2 {
             text-transform: uppercase;
             font-size: 2.0rem;
-            margin: 20px 0 5px;
+            margin: 20px 0 ;
             color: #2F4858;
         }
 
@@ -37,7 +37,7 @@
 
         input {
             width: 70%;
-            max-width: 300px;
+            max-width: 200px;
             height: 30px;
             padding: 0 10px;
             border-radius: 5px;
@@ -45,7 +45,7 @@
             outline: none;
             font-size: 1.6rem;
             box-shadow: $boxShadow;
-
+            margin: 20px 0;
         }
 
         button {
